--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         
     </head>
@@ -17,7 +18,20 @@
         {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus" id="createplus"></span></a>
         {% endif %}
-        <h1><a href="/">Solar System News</a></h1>
+
+
+
+
+        <img src="{% static 'css/logo.png' %}" id="imglogo" alt="Логотип">
+        <a href="/"><span class="textlogo">Solar System News</span></a>
+        
+        <ul>
+            <a href=""><li><i class="fas fa-list"></i> Категории</li></a>
+            <a href=""><li><i class="fas fa-address-card"></i> Про нас</li></a>
+        </ul>
+
+
+
     </div>
     <div class="content container">
         <div class="row">
