--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,8 +26,8 @@
         <a href="/"><span class="textlogo">Solar System News</span></a>
         
         <ul>
-            <a href=""><li><i class="fas fa-list"></i> Категории</li></a>
-            <a href=""><li><i class="fas fa-address-card"></i> Про нас</li></a>
+            <a href=""><li id='ctgnvgt'><i class="fas fa-list"></i> Категории</li></a>
+            <a href=""><li id='aboutusnvgt'><i class="fas fa-address-card"></i> Про нас</li></a>
         </ul>
 
 
