--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,8 +1,8 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+    <title>Space News - {{ post.title }}</title>
     <div class="post">
-
         {% if user.is_authenticated %}
             <a class="edit btn btn-default"  id="editbtn" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
