--- a/blog/templates/account/base.html
+++ b/blog/templates/account/base.html
@@ -10,13 +10,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        
+        <title>{% block head_title %}{% endblock %}</title>
+        {% block extra_head %}
+        {% endblock %}
     </head>
-       <body>
-       
+
+
+  <body>
     <div class="page-header">
         {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus" id="createplus"></span></a></class>
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus" id="createplus"></span></a>
         {% endif %}
 
 
@@ -37,19 +40,45 @@
 
             {% endif %}
         </ul>
+  </div>
 
+    {% block body %}
 
-
+    {% if messages %}
+    <div>
+      <strong>Сообщения:</strong>
+      <ul>
+        {% for message in messages %}
+        <li>{{message}}</li>
+        {% endfor %}
+      </ul>
     </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
+    {% endif %}
 
-            
-            {% endblock %}
-            </div>
-        </div>
+
+
+
+    <div class='authbase'>
+      <strong id='authmenuline'>Меню:</strong>
+      <ul>
+        {% if user.is_authenticated %}
+
+        <li><a href="{% url 'account_email' %}">Сменить E-mail</a></li>
+        <li><a href="{% url 'account_logout' %}">Выйти</a></li>
+
+        {% else %}
+        
+        <li><a href="{% url 'account_login' %}">Войти</a></li>
+        <li><a href="{% url 'account_signup' %}">Регистрация</a></li>
+        
+        {% endif %}
+      </ul>
+
+    {% block content %}
+    {% endblock %}
+    {% endblock %}
+    {% block extra_body %}
+    {% endblock %}
     </div>
-</body>
+  </body>
 </html>
