--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
     <title>Space News - {{ post.title }}</title>
     <div class="post">
-        {% if user.is_authenticated %}
+        {% if user.is_admin %}
             <a class="edit btn btn-default"  id="editbtn" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
         <h1>{{ post.title }}</h1>
